sg/main.tf
terraform {
  required_version = ">= 0.15"
}

# Create Security Group for Jenkins Instances
/*resource "aws_security_group" "sg_Jenkins_SSH" {
  name        = "allow_Jenkins_SSH"
  description = "Allow Jenkins and SSH"
  vpc_id = var.vpc_id

  ingress {
    description = "Jenkins"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name        = "Allow_Jenkins"
    Environment = "Dev"
  }
}
*/

# Create Security Group for Web Servers
resource "aws_security_group" "sg_HTTP_SSH" {
  name        = "allow_HTTP_SSH"
  description = "Allow HTTP and SSH"
  vpc_id      = var.vpc_id

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name        = "Allow_webServers"
    Environment = "Dev"
  }
}

# Create Security Group for Web Servers
resource "aws_security_group" "sg_ELB" {
  name        = "allow_ELB_traffic"
  description = "Allow HTTP"
  vpc_id      = var.vpc_id

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name        = "Allow_ELB_traffic"
    Environment = "Dev"
  }
}
